--- a/_bibliography/publications.bib
+++ b/_bibliography/publications.bib
@@ -3,57 +3,55 @@
 References
 ==========
 
-@inproceedings{DBLP:conf/sat/FuM06,
-  author      = {Zhaohui Fu and
-                 Sharad Malik},
-  editor      = {Armin Biere and
-                 Carla P. Gomes},
-  title       = {On Solving the Partial {MAX-SAT} Problem},
-  booktitle   = {Theory and Applications of Satisfiability Testing --- {SAT} 2006, 9th
-                 International Conference, Seattle, WA, USA, August 12--15, 2006, Proceedings},
-  series      = {Lecture Notes in Computer Science},
-  volume      = {4121},
-  pages       = {252--265},
-  publisher   = {Springer},
-  year        = {2006},
-  url         = {https://doi.org/10.1007/11814948_25},
-  doi         = {10.1007/11814948_25},
-  bibtex_show = true
+@misc{https://doi.org/10.48550/arxiv.2210.12511,
+  doi = {10.48550/ARXIV.2210.12511},
+  
+  url = {https://arxiv.org/abs/2210.12511},
+  
+  author = {Ma, Ziqiao and *VanDerPloeg, Ben and *Bara, Cristian-Paul and *Yidong, Huang and Kim, Eui-In and Gervits, Felix and Marge, Matthew and Chai, Joyce},
+  
+  keywords = {Artificial Intelligence (cs.AI), Computation and Language (cs.CL), Computer Vision and Pattern Recognition (cs.CV), Robotics (cs.RO), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  
+  title = {DOROTHIE: Spoken Dialogue for Handling Unexpected Situations in Interactive Autonomous Driving Agents},
+  
+  publisher = {arXiv},
+  
+  year = {2022},
+  
+  copyright = {Creative Commons Attribution Non Commercial No Derivatives 4.0 International}
 }
 
-@book{ruby,
-  title       = {The Ruby Programming Language},
-  author      = {Flanagan, David and Matsumoto, Yukihiro},
-  year        = {2008},
-  publisher   = {O'Reilly Media},
-  bibtex_show = true
+@misc{https://doi.org/10.48550/arxiv.2112.10046,
+  doi = {10.48550/ARXIV.2112.10046},
+  
+  url = {https://arxiv.org/abs/2112.10046},
+  
+  author = {Wei, Zihao and Huang, Yidong and Chen, Yuang and Zheng, Chenhao and Gao, Jinnan},
+  
+  keywords = {Image and Video Processing (eess.IV), Computer Vision and Pattern Recognition (cs.CV), Machine Learning (cs.LG), FOS: Electrical engineering, electronic engineering, information engineering, FOS: Electrical engineering, electronic engineering, information engineering, FOS: Computer and information sciences, FOS: Computer and information sciences},
+  
+  title = {A-ESRGAN: Training Real-World Blind Super-Resolution with Attention U-Net Discriminators},
+  
+  publisher = {arXiv},
+  
+  year = {2021},
+  
+  copyright = {arXiv.org perpetual, non-exclusive license}
 }
-
-@article{test,
-  title       = {An Article},
-  abbr        = {Test},
-  author      = {Me, Myself and Others, Them},
-  journal     = {Some important journal},
-  year        = {2010},
-  publisher   = {O'Reilly Media},
-  html        = {https://www.google.com},
-  pdf         = {https://www.google.com},
-  code        = {https://www.google.com},
-  slides      = {https://www.google.com},
-  poster      = {https://www.google.com},
-  url         = {https://www.google.com},
-  doi         = {https://www.google.com},
-  arxiv       = {2207.09703},
-  supp        = {https://www.google.com},
-  blog        = {https://www.google.com},
-  website     = {https://www.google.com},
-  latex_src   = {https://www.google.com},
-  abstract    = { Iusto distinctio qui perferendis eum et quaerat modi non. Eum est molestiae eum iste maxime fugit facere. Voluptatem quaerat ipsam mollitia velit error nesciunt molestiae exercitationem. Dolorem repellat officia aspernatur suscipit. Nulla fugiat voluptas harum ipsam odit sed iure.<br>
-                 Et ea ullam nisi id debitis. Voluptas error sit facere nihil excepturi voluptas. Ipsum aut iusto autem et sit. Cum necessitatibus exercitationem harum dolores beatae expedita. Sit sed impedit numquam. Provident reiciendis velit quibusdam autem.<br>
-                 Nulla dolorum ad et labore debitis ea labore. Quis eum reiciendis expedita. Sit in eum eveniet. Tempore necessitatibus dolor consequatur minima. Doloribus cumque reprehenderit minus autem tenetur molestias facilis.<br>
-                 Saepe nesciunt quasi itaque ipsam repudiandae. Distinctio non officiis iure. Ullam iure officia odit suscipit voluptas commodi facere quibusdam. Quia quasi sed ad voluptates voluptatum. Quasi temporibus fugit non molestiae dignissimos numquam.<br>
-                 Dolorem ducimus et rerum dolorem. Quia molestiae qui qui. Omnis modi quia corrupti aut nobis voluptatem eius ut.
-                 },
-  bibtex_show = true
+@misc{https://doi.org/10.48550/arxiv.2204.10976,
+  doi = {10.48550/ARXIV.2204.10976},
+  
+  url = {https://arxiv.org/abs/2204.10976},
+  
+  author = {Pan, Zixuan and Wei, Zihao and Huang, Yidong and Gupta, Aditya},
+  
+  keywords = {Machine Learning (cs.LG), Artificial Intelligence (cs.AI), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  
+  title = {Discovering Intrinsic Reward with Contrastive Random Walk},
+  
+  publisher = {arXiv},
+  
+  year = {2022},
+  
+  copyright = {Creative Commons Attribution 4.0 International}
 }
-
