--- a/_bibliography/publications.bib
+++ b/_bibliography/publications.bib
@@ -2,23 +2,19 @@
 ---
 References
 ==========
+@article{xu2023cyclenet,
+  title={CycleNet: Rethinking Cycle Consistency in Text-Guided Diffusion for Image Manipulation},
+  author={Xu, Sihan and Ma, Ziqiao and Huang, Yidong and Lee, Honglak and Chai, Joyce},
+  journal={arXiv preprint arXiv:2310.13165},
+  year={2023}
+}
 
-@misc{https://doi.org/10.48550/arxiv.2210.12511,
-  doi = {10.48550/ARXIV.2210.12511},
-  
-  url = {https://arxiv.org/abs/2210.12511},
-  
-  author = {Ma, Ziqiao and *VanDerPloeg, Ben and *Bara, Cristian-Paul and *Yidong, Huang and Kim, Eui-In and Gervits, Felix and Marge, Matthew and Chai, Joyce},
-  
-  keywords = {Artificial Intelligence (cs.AI), Computation and Language (cs.CL), Computer Vision and Pattern Recognition (cs.CV), Robotics (cs.RO), FOS: Computer and information sciences, FOS: Computer and information sciences},
-  
-  title = {DOROTHIE: Spoken Dialogue for Handling Unexpected Situations in Interactive Autonomous Driving Agents},
-  
-  publisher = {arXiv},
-  
-  year = {2022},
-  
-  copyright = {Creative Commons Attribution Non Commercial No Derivatives 4.0 International}
+@inproceedings{ma2022dorothie,
+  title={DOROTHIE: Spoken Dialogue for Handling Unexpected Situations in Interactive Autonomous Driving Agents},
+  author={Ma, Ziqiao and VanDerPloeg, Benjamin and Bara, Cristian-Paul and Huang, Yidong and Kim, Eui-In and Gervits, Felix and Marge, Matthew and Chai, Joyce},
+  booktitle={Findings of the Association for Computational Linguistics: EMNLP 2022},
+  pages={4800--4822},
+  year={2022}
 }
 
 @misc{https://doi.org/10.48550/arxiv.2112.10046,
