--- a/_bibliography/publications.bib
+++ b/_bibliography/publications.bib
@@ -1,11 +1,19 @@
 ---
 ---
 References
-==========
-@article{xu2023cyclenet,
+==========@inproceedings{wei2023esrgan,
+  title={A-ESRGAN: Training real-world blind super-resolution with attention U-Net Discriminators},
+  author={Wei, Zihao and Huang, Yidong and Chen, Yuang and Zheng, Chenhao and Gao, Jingnan},
+  booktitle={Pacific Rim International Conference on Artificial Intelligence},
+  pages={16--27},
+  year={2023},
+  organization={Springer}
+}
+
+@inproceedings{xu2023cyclenet,
   title={CycleNet: Rethinking Cycle Consistency in Text-Guided Diffusion for Image Manipulation},
   author={Xu, Sihan and Ma, Ziqiao and Huang, Yidong and Lee, Honglak and Chai, Joyce},
-  journal={arXiv preprint arXiv:2310.13165},
+  booktitle={Thirty-seventh Conference on Neural Information Processing Systems},
   year={2023}
 }
 
@@ -17,23 +25,13 @@ References
   year={2022}
 }
 
-@misc{https://doi.org/10.48550/arxiv.2112.10046,
-  doi = {10.48550/ARXIV.2112.10046},
-  
-  url = {https://arxiv.org/abs/2112.10046},
-  
-  author = {Wei, Zihao and Huang, Yidong and Chen, Yuang and Zheng, Chenhao and Gao, Jinnan},
-  
-  keywords = {Image and Video Processing (eess.IV), Computer Vision and Pattern Recognition (cs.CV), Machine Learning (cs.LG), FOS: Electrical engineering, electronic engineering, information engineering, FOS: Electrical engineering, electronic engineering, information engineering, FOS: Computer and information sciences, FOS: Computer and information sciences},
-  
-  title = {A-ESRGAN: Training Real-World Blind Super-Resolution with Attention U-Net Discriminators},
-  
-  publisher = {arXiv},
-  
-  year = {2021},
-  
-  copyright = {arXiv.org perpetual, non-exclusive license}
+@article{xu2023inversion,
+  title={Inversion-Free Image Editing with Natural Language},
+  author={Xu, Sihan and Huang, Yidong and Pan, Jiayi and Ma, Ziqiao and Chai, Joyce},
+  journal={arXiv preprint arXiv:2312.04965},
+  year={2023}
 }
+
 @misc{https://doi.org/10.48550/arxiv.2204.10976,
   doi = {10.48550/ARXIV.2204.10976},
   
