add pub drivlme

--- a/_bibliography/publications.bib
+++ b/_bibliography/publications.bib
@@ -49,3 +49,9 @@ References
   
   copyright = {Creative Commons Attribution 4.0 International}
 }
+
+@inproceedings{huang2024drivlme,
+  title={DriVLMe: Enhancing LLM-based Autonomous Driving Agents with Embodied and Social Experiences},
+  author={Huang, Yidong and Sansom, Jacob and Ma, Ziqiao and Gervits, Felix and Chai, Joyce},
+  booktitle={First Vision and Language for Autonomous Driving and Robotics Workshop}
+}
