--- a/_bibliography/publications.bib
+++ b/_bibliography/publications.bib
@@ -49,9 +49,11 @@ References
   
   copyright = {Creative Commons Attribution 4.0 International}
 }
-
 @inproceedings{huang2024drivlme,
-  title={DriVLMe: Enhancing LLM-based Autonomous Driving Agents with Embodied and Social Experiences},
+  title={Drivlme: Enhancing llm-based autonomous driving agents with embodied and social experiences},
   author={Huang, Yidong and Sansom, Jacob and Ma, Ziqiao and Gervits, Felix and Chai, Joyce},
-  booktitle={First Vision and Language for Autonomous Driving and Robotics Workshop}
+  booktitle={2024 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  pages={3153--3160},
+  year={2024},
+  organization={IEEE}
 }
